--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+1.101
+  - Fix dependencies in Makefile.PL, merge fail :/
 1.100
   - Refactor into a Moose Role for use with alternate views. (rafl)
   - Additional documentation (t0m)
