General cleanup and new version

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
+1.103
+  - Fix previously built dist being present in the tarball (t0m)
 1.102
   - Add Vary header to prevent potential problems with downstream caches
+    (dorward)
 1.101
   - Fix dependencies in Makefile.PL, merge fail :/
 1.100
@@ -13,7 +16,7 @@
   - Fixes an tests to be fully Internet Explorer compatible (David Dorward)
   - Change to MRO::Compat for perl 5.10 (t0m)
 1.002 2008-12-13
-  - Add 'use Class::C3' so that the module works on the currently 
+  - Add 'use Class::C3' so that the module works on the currently
     released Catalyst version. (t0m)
 1.001 2008-12-12
   - Add tests for other Accept header cases where the current code
